@@ -48,7 +48,7 @@
   </extension>
 </addon>
 
-<addon id="plugin.video.replaypt" name="Replay PT" version="0.2.0" provider-name="techdealer">
+<addon id="plugin.video.replaypt" name="Replay PT" version="0.2.1" provider-name="techdealer">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
